--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,26 +5,50 @@
  */
 
 /* You can override the default Infima variables here. */
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url('/font/SourceSansPro-Regular.otf');
+}
+
+
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+
+  --ifm-font-family-base:    'Source Sans Pro', sans-serif;
+  --ifm-heading-font-family: 'Source Sans Pro', sans-serif;
+  /* 100% of browser default (16px) */
+  --ifm-font-size-base: 100%;
+
+
+  --ifm-color-primary: #50742f;
+  --ifm-color-primary-dark: #3f5b2f;
+  --ifm-color-primary-darker: #2f423f;
+  --ifm-color-primary-darkest: #2f3f3f;
+  --ifm-color-primary-light: #5b7f3f;
+  --ifm-color-primary-lighter: #7f9f5b;
+  --ifm-color-primary-lightest: #9fcf7f;
+  --ifm-background-color: #ffffff;
+
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+body {
+  color: #212529;
+}
+
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  /* adopted colors to match dark mode */
+  --ifm-color-primary: #9fcf7f;
+  --ifm-color-primary-dark: #7f9f5b;
+  --ifm-color-primary-darker: #5b7f3f;
+  --ifm-color-primary-darkest: #3f5b2f;
+  --ifm-color-primary-light: #2f423f;
+  --ifm-color-primary-lighter: #2f3f3f;
+  --ifm-color-primary-lightest: #50742f;
+  --ifm-background-color: #212529;
+
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
