--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,6 +49,7 @@ body {
   --ifm-color-primary-lighter: #2f3f3f;
   --ifm-color-primary-lightest: #50742f;
   --ifm-background-color: #212529;
+  body { color: #f2f2f2; }
 
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
