--- a/src/theme/Footer/Layout/styles.module.css
+++ b/src/theme/Footer/Layout/styles.module.css
@@ -147,7 +147,6 @@
   text-align: center;
   font-size: 0.8rem;
   color: #687182;
-  border-top: 1px solid #e0e0e0;
   font-family: "Source Sans Pro", sans-serif;
   line-height: 1.5rem;
 }
@@ -168,4 +167,26 @@
   font-family: "Source Sans Pro", sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+/* Dark Mode */
+[data-theme='dark'] .footerContainer {
+  background-color: #131618;
+}
+
+[data-theme='dark'] .footerContainer * {
+  color: #f3f3f3;
+}
+
+[data-theme='dark'] .footerContainer a:hover {
+  text-decoration: underline !important;
+}
+
+[data-theme='dark'] .footerContainer .hrBold {
+  border-bottom-color: #444;
+}
+
+[data-theme='dark'] .footerContainer .copyrightSection {
+  border-top-color: #f3f3f3;
+  color: #000000;
 }
