--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,9 @@
+/* 
+SPDX-FileCopyrightText: 2024 NOI Techpark <digital@noi.bz.it>
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+ 
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
