--- a/src/css/swagger-dark-fix.css
+++ b/src/css/swagger-dark-fix.css
@@ -1,3 +1,9 @@
+/* 
+SPDX-FileCopyrightText: 2024 NOI Techpark <digital@noi.bz.it>
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+ 
 html[data-theme='dark'] {
   .swagger-ui, .swagger-ui section h3 { color: #b5bac9; }
 
