--- a/src/theme/Footer/Layout/styles.module.css
+++ b/src/theme/Footer/Layout/styles.module.css
@@ -1,3 +1,8 @@
+/* 
+SPDX-FileCopyrightText: 2024 NOI Techpark <digital@noi.bz.it>
+
+ SPDX-License-Identifier: AGPL-3.0-or-later
+ */
 
 /* Global footer styles */
 .footerContainer * {
