--- a/src/theme/NavbarItem/NavbarNavLink/styles.css
+++ b/src/theme/NavbarItem/NavbarNavLink/styles.css
@@ -1,3 +1,9 @@
+/* 
+SPDX-FileCopyrightText: 2024 NOI Techpark <digital@noi.bz.it>
+
+SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+ 
 .dropdown--show .link__label {
   color: var(--ifm-navbar-link-hover-color);
 }
